--- a/src/utils/_variables.scss
+++ b/src/utils/_variables.scss
@@ -26,7 +26,7 @@ $code-bg: #212121 !default;
 $mark-bg: #fffcd2 !default;
 
 // Font properties
-$font-family-prim: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+$font-family-prim: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol !default;
 
 $font-size-base: 16px !default;
 
